# sprachli

./: Cargo.toml  LICENSE.md  README.md
notes/syntax/: 1.spr  2.spr  3.spr  4.spr  5.spr  6_1.spr  6_2.spr  6_3.spr  7.spr
sprachli_bytecode/: Cargo.toml
sprachli_bytecode/src/: error.rs  instruction.rs  lib.rs  parser.rs
sprachli_fmt/: Cargo.toml
sprachli_fmt/src/: lib.rs
sprachli_jit/: Cargo.toml
sprachli_jit/src/: main.rs
sprachli_parser/: Cargo.toml
sprachli_parser/src/: lib.rs
sprachli_parser/src/ast/: declarations.rs  expressions.rs  mod.rs  statements.rs
sprachli_parser/src/parser/: string_literal.rs
src/: lib.rs  main.rs
src/ast/: declarations.rs  expressions.rs  mod.rs  statements.rs
src/bytecode/: error.rs  fmt_helpers.rs  instruction.rs  mod.rs  parser.rs
src/compiler/: constant.rs  error.rs  instruction.rs  mod.rs  writer.rs
src/fmt/: mod.rs
src/grammar/: mod.rs  sprachli.lalrpop
src/interpreter/: environment.rs  mod.rs  value.rs
src/parser/: mod.rs  sprachli.lalrpop
src/vm/: constant_table.rs  environment.rs  error.rs  instruction.rs  interpreter.rs  mod.rs  stack.rs  value.rs
src/vm/ast_module/: constants.rs  mod.rs  value.rs
src/vm/bytecode/: error.rs  instructions.rs  mod.rs  parser.rs  writer.rs
src/vm/interpreter/: mod.rs  (+2 more)
test_programs/: even.spr  loop.spr  return.spr  test.spr  variable.spr
tests/: e2e_test.rs
tests/programs/: assign.spr  assign_immutable.spr  bool.spr  break.spr  continue.spr  escape.spr  fn_expr.spr  higher_order.spr  loop.spr  max.spr  return.spr  statement.spr  struct.spr  variable.spr
