[package]
name = "sprachli"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
regex = "1.5.6"
thiserror = "1.0.31"

[build-dependencies]
lalrpop = "0.19.8"
