[workspace]
members = ["sprachli_*"]
exclude = []

[package]
name = "sprachli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
bigdecimal = "0.3.0"
clap = { version = "3.2.16", features = ["derive"] }
itertools = "0.10.5"
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
regex = "1.5.6"
sprachli_bytecode = { path = "./sprachli_bytecode" }
sprachli_fmt = { path = "./sprachli_fmt" }
sprachli_parser = { path = "./sprachli_parser" }
thiserror = "1.0.31"
